Removes tornado_pyvows local copy.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,7 @@ parts =
     pyvows
 develop = .
 eggs = trombi [test]
-develop = /Users/jeckyll/Documents/projects/tornado_pyvows/
+# develop = /Users/jeckyll/Documents/projects/tornado_pyvows/
 versions = versions
 extends =
     versions.cfg
